# ChangeLog for net-analyzer/cacti
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/cacti/ChangeLog,v 1.189 2013/02/16 12:46:12 pacho Exp $

  16 Feb 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due bug #96436

  01 Jan 2012; Raúl Porcel <armin76@gentoo.org> cacti-0.8.7i.ebuild:
  alpha/sparc/x86 stable wrt #394595

  23 Dec 2011; Mark Loeser <halcy0n@gentoo.org> cacti-0.8.7g.ebuild:
  Drop stable ppc/ppc64

  16 Dec 2011; Jeroen Roovers <jer@gentoo.org> cacti-0.8.7i.ebuild:
  Stable for HPPA (bug #394595).

  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> cacti-0.8.7i.ebuild:
  Stable for AMD64, wrt security bug #394595

  12 Dec 2011; Peter Volkov <pva@gentoo.org> +cacti-0.8.7i.ebuild:
  Version bump. Plugin architecture is now includded, bug #346741 wrt Jens Ott
  and Alon Bar-Lev.

  13 Nov 2011; Markus Meier <maekke@gentoo.org> cacti-0.8.7h.ebuild:
  x86 stable, bug #387661

  20 Oct 2011; Jeroen Roovers <jer@gentoo.org> cacti-0.8.7h.ebuild:
  Stable for HPPA (bug #387661).

  20 Oct 2011; Tony Vroon <chainsaw@gentoo.org> cacti-0.8.7h.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in bug #387661.

*cacti-0.8.7h (02 Oct 2011)

  02 Oct 2011; Peter Volkov <pva@gentoo.org> +cacti-0.8.7h.ebuild:
  Version bump, bug #384627 thank Martin Samek for report.

  01 Apr 2011; Peter Volkov <pva@gentoo.org> -cacti-0.8.7e-r2.ebuild,
  -cacti-0.8.7e-r3.ebuild:
  Drop old.

  20 Dec 2010; Brent Baude <ranger@gentoo.org> cacti-0.8.7g.ebuild:
  Marking cacti-0.8.7g ppc64 for bug 324031

  20 Nov 2010; Raúl Porcel <armin76@gentoo.org> cacti-0.8.7g.ebuild:
  alpha/sparc stable wrt #324031

  19 Nov 2010; Jeroen Roovers <jer@gentoo.org> cacti-0.8.7g.ebuild:
  Stable for HPPA PPC (bug #324031).

  17 Nov 2010; Markos Chandras <hwoarang@gentoo.org> cacti-0.8.7g.ebuild:
  Stable on amd64 wrt bug #324031
