@@ -2,25 +2,17 @@
 Hash: SHA256
 
 AUX postinstall-en.txt 2249 SHA256 7879329884e33f84108d5fbed732941c9fd8a53b56db499bfc0bd282bd61b10d SHA512 8df52b187b301b42382746f9dea43993f7963edf018bc80e94305a743ea5fbb024d670917c0200f4782c0a3bd47abfb879c755ad415581616ae5c6413cf00623 WHIRLPOOL 0739ae29e564e81b4a08a74685efe93ec5248048dd47555befb1e805a9dc3d1606adc9126b5959ccab39f7e30d2ed4d956d78b84efedd54545a1d998986477a2
-DIST cacti-0.8.7g.tar.gz 2236916 SHA256 d09b3bf54f51bd42b2db0a62521cf6e408716978f75d6509ec56027c49c44585
-DIST cacti-0.8.7h.tar.gz 2249323 SHA256 2e3dc330b5b3ee374b2e553650d032441c25831b39ddcf123ef102492f20603c
 DIST cacti-0.8.7i.tar.gz 2250128 SHA256 89846762b8f4586532ff247ec7331958f5e4a8c3c599ff8aceb53815fbf9d1cb
-DIST data_source_deactivate.patch 510 SHA256 52155c5ca38a8df1adcc8a5b4d0bc1b4befa7ede4c56d10dba64cbde2c54042e
-DIST graph_list_view.patch 7636 SHA256 e43b2cf3c53029880ac16a9b86036d5136ab2de116bfba868fac2abd2ed14778
-DIST html_output.patch 7317 SHA256 276811704d6f4353542461c04a2561721bcc784326feefff460fae45c3849278
-DIST ldap_group_authenication.patch 591 SHA256 413a781c5aaa4c6ce8eb152f1ecbeb87c4efa5623c5b839c9c5103b6db6e0989
-DIST ping.patch 1033 SHA256 63c56b55aaf41a5e10908bb8ecffb47f74e11254d7e46223d8d04a9df48eda5e
-DIST poller_interval.patch 5852 SHA256 64a6748573395956565c9886cc999a92655ad7f5ba62c53b3299d047912d3aaf
-DIST script_server_command_line_parse.patch 3038 SHA256 40c8ad2dcc6664360ee9941849d7fff1c136e1d942f7ba2a2ea602da20a39e56
-EBUILD cacti-0.8.7g.ebuild 2115 SHA256 1b221d71f9497008d4c7de9d56102e1ab223abd3ca6457beae3aafc615bbb54a SHA512 2d353ec4b42b5362bb164be81785c4802d3c1127c06afcdaba376670c8cfc3e402041ce6dcd6300ffdbcba2abaf26714edfbbc2dacd2bb0c42f23be32f176ad1 WHIRLPOOL 6fa67e9b980dcdcf4498384af5cbafc88436533307c325e63adcf4d5a3e18bbcd99879d0bd876c52fcf5250b90691054a3a590d6469f2b6cf8ad413ea8f1e1fa
-EBUILD cacti-0.8.7h.ebuild 1964 SHA256 af5365fbc6b0bc2da49885abe0ba64c810ce87d6d691d030e05bc3b59c49b378 SHA512 9aac3b785ac30b7c75db58dbb0922697558bb4ae1ad76eb7eaa18c0a200d161b5811874edda85d1a4b6697d1d16f4c43f1d49e256426689c2ed43405e9609e1e WHIRLPOOL cda4599b5a9832469fd42617943865cdbda2f1add01d4e1f997df038789d2d7a58d458fa3580040fd7f50eb0668d9fa910a36dd7887908de938d7e2823acb7e0
+DIST cacti-0.8.8a.tar.gz 2273280 SHA256 9fea2b6c438ebf2740b5982a6ff7cfd2816e48ea88a347ef0ef238c7b4875955 SHA512 186df9d208a7726f7cfa6f4d6fff6faf17235ccd5f365a92f064be550b2d8274fba1d269eca0f18c4e4617f75d714ac4cb1db9d5a23504a38173182b01b7d1dc WHIRLPOOL 651b2778fb44dabbce3b56a29a4a2754fabbc70e38382743cff81eddbccf60e3193a48ce1eda4dfd3f2bc7977bca5a5186bf4726831132f50741be549bca991d
+DIST snmpv3_priv_proto_none.patch 1407 SHA256 8d48d9cf89f2ba47a6dbce884ab3f3c164b52ed4771b8b76c656a3ae967211f8 SHA512 d678dc0dcde509358fbe38fcf3649d5c4569b9b5b7d34b9e739664592060bbaa28f753c0de47548bbc169b4de42d097fb6338ac68465fe49b41bfad108bfc0f4 WHIRLPOOL 902282412047ddacde750ab553c65062e455a793f06d3f3190800edda6b860886207f32c9cb7b18377fd971f885ea8c6511b4fd489a3ac85bea9117bf681441a
 EBUILD cacti-0.8.7i.ebuild 1963 SHA256 5c962312f6102a9ab2b5bacdce09226a42fca1513ebeecbc26ba6cf0cd16aafb SHA512 e013eb4d983a7ccf570406efd89fa1afc2c7d58ca5a72f5a0029e4b33e759516a1ceb388ba18ff025c7df5da75f596143bcd0ca979efbabc211699f8590e7d79 WHIRLPOOL 234ea1f4217fd3a05786e347002c68211f19289e4d1149ea183c960fe9bf43d20fa6fae7b1d2a11307cb231452a04d3aa84b1b05473d7e8845967d2ee50bccb2
-MISC ChangeLog 26908 SHA256 452775590655c666b6ad487be256a3e67193499904656b67bce54fdd0c12e5f4 SHA512 9ea6ee09521e81c3cd17945d42dfa10a3ea333dafe6380c23fabd7bde6ed0c97061ceee783aebad5114c4d91356b5d058fdb186f42e6980292ba0a33d1f6ef68 WHIRLPOOL 078771d77f59db03a007d452d9a93f51b0423262aaf9d7f68666a3cf8a7dfb8995a22b4af49e105916e6c0e270293375b891efbfad7435539a1d5a67cadef751
+EBUILD cacti-0.8.8a.ebuild 1994 SHA256 f68b5bf2b45d45f0b677b46a08db3768b9f791edc62e60deeab5f252643d2ab8 SHA512 3a09ae0c5880f6eb59120cab292d42d1aa582493bfaff3a477c20aea6ec6e3c5173c4dc61bc32204fda7d433678525a631d187b8d3d1aecd7840a32c2b418265 WHIRLPOOL db9f6433c0dc00ecdc8c8a615da528841cf744b391c7de5686bf8c185bab02fe7435b4b43490696b61d19acfbb9657c9d64aebc25ac9e381b1c8b5dd189255c6
+MISC ChangeLog 27154 SHA256 d31917b58a93efc3cc04b9a8cdd953998e84d943649e81b9089279e984f77bd4 SHA512 16d44b841a8a6b7ddf4b6fc3b713634fbbdfb82683d28047dc98190f56616d527c4bc01e9aa043a24ea1bc7372625c24ac426c7684182d12b57c2c3dc8d9e629 WHIRLPOOL 91a826c7c381c1528ca38ff7af9d21a027ec5c5dc1edeae71d6c6e26b7d2bbdedf543fb956520fac1f8914cc513c4af106ddd592e5761285b5c28423a8c3a5aa
 MISC metadata.xml 714 SHA256 87c3b48a554466e6e0a75944751f2e73326aef52d13d16110aaf6df770aca530 SHA512 6476909d8b29f1a56d7c7e26e8bc4edef5c46aee49ab18175f8727812764d1f1ae89781d09cf8de1ea42edc3f022432e6d52d42b75109e95c07998d7250bb40d WHIRLPOOL 6ce5f9fc982b7da218ea2dba530a5971f3acab63a996828c145bcd3c9ba049183ddd249325728fe6613148438e02dc5eafee18659bd6c977c740b35d82fcb6f8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEff5YACgkQCaWpQKGI+9RgLgCeNOWOGWD8Xdxg/x3IfxHhBL5O
-V1wAn20RK6SbNm9WKTiF6CGvBZB7QU85
-=XRgn
+iF4EAREIAAYFAlF76fUACgkQGrk+8vGYmwdBWwEAyN9LQtBb7E9vg3pBupwqTlJr
+6hemtraq6oLF2GTxfVAA/2Ejbp9RcXbw0jo5JDFlj+/Jy29IxqjzHHm5TI0bKnL3
+=YfEh
 -----END PGP SIGNATURE-----
