@@ -1,6 +1,13 @@
 # ChangeLog for net-analyzer/cacti
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/cacti/ChangeLog,v 1.189 2013/02/16 12:46:12 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/cacti/ChangeLog,v 1.190 2013/04/27 15:08:31 pva Exp $
+
+*cacti-0.8.8a (27 Apr 2013)
+
+  27 Apr 2013; Peter Volkov <pva@gentoo.org> +cacti-0.8.8a.ebuild,
+  -cacti-0.8.7g.ebuild, -cacti-0.8.7h.ebuild:
+  Version bump, thank guys in bug #414419. php-5.4 compatibility repoted in
+  #438630 is here. Drop old.
 
   16 Feb 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Cleanup due bug #96436
